[metadata]
description-file = README.md

[mypy]
python_version = 3.8
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = True
warn_unused_ignores = true
[mypy-serial]
ignore_missing_imports = True
[mypy-serial_asyncio]
ignore_missing_imports = True
