[metadata]
name = pymonoprice
url = https://github.com/etsinko/pymonoprice
license = MIT
license_file = LICENSE.txt
description = Python API for talking to Monoprice 6-zone amplifier
long_description = file: README.md
long_description_content_type = text/x-markdown
author = Egor Tsinko
author_email = etsinko@gmail.com
classifiers =
  Development Status :: 4 - Beta
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10

[options]
packages =
  pymonoprice
python_requires >= 3.7
zip_safe = True
install_requires =
  pyserial>=3.4
  pyserial-asyncio>=0.4

[mypy]
python_version = 3.7
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = True
warn_unused_ignores = true
[mypy-serial]
ignore_missing_imports = True
[mypy-serial_asyncio]
ignore_missing_imports = True
